--- a/ui.apps/src/main/content/jcr_root/apps/aem-demo/components/content/form/form.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-demo/components/content/form/form.html
@@ -1,8 +1,9 @@
 
-<div class="form-resource" data-path="${resource.path}" >
+<div class="form-resource" data-path="${resource.path}" data-sly-use.result="com.demo.core.content.FormModel" >
 <html>
 <head></head>
 <body>
+
 
 <form id="form" action="javascript:void(0);" onsubmit="javascript:void(0);">
 <table border='0' width='480px' cellpadding='0' cellspacing='0' align='center'>
@@ -24,6 +25,14 @@
             <tr>
                 <td align='center'>Age:</td>
                 <td><input type='text' name='age'   id='age'></td>
+            </tr> <td>&nbsp;</td> </tr>
+            <tr>
+                <td align='center'>Gender:</td>
+                <td><select  id='gender'>
+                    <sly data-sly-list.userGender="${result.userGender}">
+                    <option > ${userGender} </option>
+                    </sly>
+                </select> </td>
             </tr>
             <tr> <td>&nbsp;</td> </tr>
             <table border='0' cellpadding='0' cellspacing='0' width='480px' align='center'>
@@ -51,6 +60,7 @@
         <th>FirstName</th>
         <th>LastName</th>
         <th>Age</th>
+        <th>Gender</th>
         <th colspan="3">Actions</th>
         </tr>
         </thead>
@@ -67,12 +77,11 @@
     </tr>
 </table>
     <table id ="slingTable" border="1">
-    <div  data-sly-use.result="com.demo.core.content.FormModel">
     <thead>
     <th>FirstName</th>
     <th>LastName</th>
     <th>Age</th>
-    <th colspan="3">Actions</th>
+    <th>Gender</th>
     </thead>
     <tbody >
      <sly data-sly-list.userData="${result.userDataArray}">
@@ -80,12 +89,10 @@
             <td>${userData.firstName}</td>
             <td>${userData.LastName}</td>
             <td>${userData.Age}</td>
-            <td><button>Edit</button></td>
-            <td><button>Delete</button></td>
+            <td>${userData.Gender}</td>
         </tr>
      </sly>
     </tbody>
-    </div>
 </table>
 </html>
 </div>
